<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@color/BackgroundForm"
    tools:context="com.example.nguyennam.financialmanagement.Calculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/edtDisplay"
            android:inputType="text"
            android:gravity="end"
            android:enabled="false"
            android:textColor="@color/black"
            style="@style/InputMoneyKeyboard"
            android:textSize="40sp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKeyC"
            android:text="@string/KeyC"
            android:background="@drawable/selector_button_orange"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKeyMulti"
            android:text="@string/KeyMulti"
            style="@style/KeyPassCode"
            android:background="@drawable/selector_button_keyboard"
            android:layout_margin="2dp"

            />
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKeyDivide"
            android:text="@string/KeyDivide"
            android:background="@drawable/selector_button_keyboard"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"

            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKeyBack"
            android:background="@drawable/selector_button_keyboard"
            android:src="@drawable/ic_action_backspace"
            android:contentDescription="@string/noname"
            android:layout_margin="2dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKey7"
            android:text="@string/Key7"
            android:background="@drawable/selector_button_number"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKey8"
            android:text="@string/Key8"
            android:background="@drawable/selector_button_number"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKey9"
            android:text="@string/Key9"
            android:background="@drawable/selector_button_number"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKeyPlus"
            android:text="@string/KeyAdd"
            android:background="@drawable/selector_button_keyboard"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKey4"
            android:text="@string/Key4"
            android:background="@drawable/selector_button_number"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKey5"
            android:text="@string/Key5"
            android:background="@drawable/selector_button_number"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKey6"
            android:text="@string/Key6"
            android:background="@drawable/selector_button_number"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKeyMinus"
            android:text="@string/KeyMinus"
            android:background="@drawable/selector_button_keyboard"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKey1"
            android:text="@string/Key1"
            android:background="@drawable/selector_button_number"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKey2"
            android:text="@string/Key2"
            android:background="@drawable/selector_button_number"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKey3"
            android:text="@string/Key3"
            android:background="@drawable/selector_button_number"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/selector_button_keyboard"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKey0"
            android:text="@string/Key0"
            android:background="@drawable/selector_button_number"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKey000"
            android:text="@string/Key000"
            android:background="@drawable/selector_button_number"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKeyDot"
            android:text="@string/KeyDot"
            android:background="@drawable/selector_button_number"
            style="@style/KeyPassCode"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:id="@+id/btnKeyEqual"
            android:text="@string/KeyDone"
            android:background="@drawable/selector_button_green"
            style="@style/TextHeader"
            android:layout_margin="2dp"
            />
    </LinearLayout>

</LinearLayout>
