<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reports"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nguyennam.financialmanagement.Reports">

    <RelativeLayout
        android:id="@+id/tabHeader"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/selector_layout_green">

        <TextView
            android:id="@+id/lbReport"
            style="@style/TextViewStyleBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/Reports" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tabHeader"
        android:background="@color/BackgroundForm">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/customeditmoney"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlSelectCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/selector_listview_ismac"
                android:clickable="true">

                <ImageView
                    android:id="@+id/igmCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/disclosure" />

                <TextView
                    style="@style/FormEditTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:clickable="false"
                    android:text="@string/MucChi" />

                <TextView
                    android:id="@+id/txtExpenseType"
                    style="@style/FormEditValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/igmCategory"
                    android:clickable="false" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="@color/Line" />

            <RelativeLayout
                android:id="@+id/rlRelation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/selector_listview_ismac"
                android:clickable="true">

                <ImageView
                    android:id="@+id/igmRelation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/disclosure" />

                <TextView
                    style="@style/FormEditTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:clickable="false"
                    android:text="@string/DienGiai" />

                <TextView
                    android:id="@+id/txtRelationTitle"
                    style="@style/FormEditValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/igmRelation"
                    android:clickable="false" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/listReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlChoice"/>

</RelativeLayout>
